ilkin haqinda yeni ozum haqinda mellumat yazdim

--- a/index.html
+++ b/index.html
@@ -3,9 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TheCafi</title>
 </head>
-<body>
-    
+<body bgcolor="red">
+    <h1>The Cafi</h1>
+    <a href="ilkin.html">
+        <button>ilkin</button>
+    </a>
+    <a href="Aysel.html">
+        <button>Aysel</button>
+    </a>
+    <a href="Elsen.html">
+        <button>Elsen</button>
+    </a>
+    <a href="Huriyye.html">
+        <button>Huriyye</button>
+    </a>
+    <a href="Fexriyye.html">
+        <button>Fexriyye</button>
+    </a>
+    <a href="Cabir.html">
+        <button>Cabir</button>
+    </a>
+    <a href="Togrul.html">
+        <button>Togrul</button>
+    </a> <br><br>
+    <img src="TheCafi.jpg" alt="" width="350px">
+    <hr>
 </body>
 </html>
