Cabir project hazır

--- a/Cabir.html
+++ b/Cabir.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cabir Novruzov</title>
 </head>
-<body>
-    
+<body style="background-color: chartreuse;">
+    <h1>Cabir Novruzov(DynaJabir)</h1>
+    <img src="cabir.jpeg"width="320" alt="">
+<h3>Mən Cabir.Mənim 13 yaşım var.Futbolla maraqlanıram.Qarabağ azərkeşiyəm və Kady Borgesi sevərək izləyirəm. </h3>
 </body>
 </html>
