--- a/Fexriyye.html
+++ b/Fexriyye.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Kerimova Fexriyye</title>
 </head>
-<body>
+<body style="background-color: palevioletred;">
+    <h1>Kerimova Fexriyye</h1>
+    <img src="fexriye.jpg" alt="" width="200">
+    <p>Menim adim Fexriyyedi 15 yasindayam, botanikaya maragim var <br>en sevdiyim fen cografiyadi geleceyde proqramist olmag istiyirem ve buna gore elimnen geleni eliyecem </p>
     
 </body>
 </html>
