--- a/Aysel.html
+++ b/Aysel.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ayselus</title>
 </head>
-<body>
+<body style="background-color: rgb(204, 105, 121);">
+    <h1>Abdullayeva Ayselus</h1>
+    <img src="ayselus.jpg" alt="" width="300">
+    <p>Adım Ayseldir 15 yaşım var 9 da oxuyuram <br>9 un imtahanın qəşəng yazıb universitetə qəbul olmaq istəyirəm <br>1 ci qrupa hazirlaşıram...</p>
     
 </body>
 </html>
