--- a/Togrul.html
+++ b/Togrul.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Toğrul Məmmədov Togrul012</title>
 </head>
-<body>
-    
+<body style="background-color: darkblue;">
+    <h1>Toğrul Məmmədov(Toğrul012)</h1>
+    <img src="Togrul.jpg" width="320" alt="">
+    <h3>Salam Mən Toğrul.Mən 19 sentyabr 2009-cı ildə anadan olmuşam.14 yaşım var gələcəyin id olmaq istəyirəm almaniyada.Mənim ən sevdiyim futbol komandası neftçi futbol komandasıdır. </h3>
 </body>
 </html>
