--- a/Huriyye.html
+++ b/Huriyye.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <h1>Eynullayeva Huriyye</h1>
-    <img src="" alt="">
+    <p>adim Huriyyedir 18 yasim var en sevdiyim reng boz ve cehrayidir </p>
 </head>
 <body>
     
