--- a/Cabir.html
+++ b/Cabir.html
@@ -9,5 +9,8 @@
     <h1>Cabir Novruzov(DynaJabir)</h1>
     <img src="cabir.jpeg"width="320" alt="">
 <h3>Mən Cabir.Mənim 13 yaşım var.Futbolla maraqlanıram.Qarabağ azərkeşiyəm və Kady Borgesi sevərək izləyirəm. </h3>
+<a href="index.html">
+    <button>ana səfihə</button>
+</a>
 </body>
 </html>
