geri butonu elave ettim

--- a/Aysel.html
+++ b/Aysel.html
@@ -9,6 +9,8 @@
     <h1>Abdullayeva Ayselus</h1>
     <img src="ayselus.jpg" alt="" width="300">
     <p>Adım Ayseldir 15 yaşım var 9 da oxuyuram <br>9 un imtahanın qəşəng yazıb universitetə qəbul olmaq istəyirəm <br>1 ci qrupa hazirlaşıram...</p>
-    
+    <a href="index.html">
+        <button>ana səfihə</button>
+    </a>
 </body>
 </html>
