--- a/Elsen.html
+++ b/Elsen.html
@@ -10,6 +10,8 @@
     <img src="img1.png" alt="" width="350">
     <p><Ins>Salam Menim Adim Elshendir.Menim 21 Yasim Var.Bu Qeder.</Ins></p>
     <p>design by elshen</p>
-
+    <a href="index.html">
+        <button>ana səfihə</button>
+    </a>
 </body>
 </html>
