--- a/Fexriyye.html
+++ b/Fexriyye.html
@@ -9,6 +9,8 @@
     <h1>Kerimova Fexriyye</h1>
     <img src="fexriye.jpg" alt="" width="200">
     <p>Menim adim Fexriyyedi 15 yasindayam, botanikaya maragim var <br>en sevdiyim fen cografiyadi geleceyde proqramist olmag istiyirem ve buna gore elimnen geleni eliyecem </p>
-    
+    <a href="index.html">
+        <button>ana səfihə</button>
+    </a>
 </body>
 </html>
