--- a/Huriyye.html
+++ b/Huriyye.html
@@ -9,6 +9,8 @@
     <p>adim Huriyyedir 18 yasim var en sevdiyim reng boz ve cehrayidir </p>
 </head>
 <body>
-    
+    <a href="index.html">
+        <button>ana səfihə</button>
+    </a>
 </body>
 </html>
