--- a/Togrul.html
+++ b/Togrul.html
@@ -9,5 +9,8 @@
     <h1>Toğrul Məmmədov(Toğrul012)</h1>
     <img src="Togrul.jpg" width="320" alt="">
     <h3>Salam Mən Toğrul.Mən 19 sentyabr 2009-cı ildə anadan olmuşam.14 yaşım var gələcəyin id olmaq istəyirəm almaniyada.Mənim ən sevdiyim futbol komandası neftçi futbol komandasıdır. </h3>
+    <a href="index.html">
+        <button>ana səfihə</button>
+    </a>
 </body>
 </html>
