--- a/ilkin.html
+++ b/ilkin.html
@@ -9,5 +9,8 @@
     <h1>Babayev ilkin</h1>
     <img src="usaqlik sekli.jpg" alt="" width="350px">
     <h3>Salam menim adım ilkin men 2006 ci ilem indiki yasim 17 di usaqlidan beri idmanla mesqulam bir cox naliyetlerim var Azerbaycan 3 cu ve defelerce Baki 1 ci Olmusamş.indiki hedefim proqramist olmaqdir.</h3>
+    <a href="index.html">
+        <button>ana səfihə</button>
+    </a>
 </body>
 </html>
